[package]
name = "maze_gen_fast"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
rand = "0.8"
rand_xoshiro = "0.6"
rayon = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indicatif = "0.17"

[profile.release]
lto = true
codegen-units = 1
